replaced for loops with streams