@@ -4,32 +4,24 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.HashSet;
-import java.util.List;
+import java.nio.file.Paths;
 import java.util.Set;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Component
 public class FileReader {
 
     //Load a set of unique words from the list
     public static Set<String> loadWordList(String filePath) throws IOException {
-
-        //Hashset to filter out duplicates and for time complexity purpose
-        Set<String> words = new HashSet<>();
-        try {
-            List<String> lines = Files.readAllLines(Path.of(filePath));
-            for (String line : lines) {
-                if (!line.isEmpty()) {
-                    words.add(line);
-                }
-            }
-
+        try (Stream<String> lines = Files.lines(Paths.get(filePath))) {
+            return lines
+                    .filter(line -> !line.isEmpty())
+                    .collect(Collectors.toSet());
         } catch (IOException e) {
-            //TODO: add different logging
             e.printStackTrace();
+            throw e;
         }
-        return words;
     }
 
 }
